--- a/styles/gameWindow.css
+++ b/styles/gameWindow.css
@@ -1,5 +1,20 @@
-*{
+* {
     padding: 0;
     margin: 0;
+}
+
+body{
+    font-family: 'Poppins', sans-serif;;
+}
+
+.btn{
+  display: inline-block;
+  background: none;
+  padding: 20px;
+  border-radius: .5rem;
+  border-style: none;
+  font-weight: 900;
+  font-size: 40px;
+  color: #0C0F21;
 
 }
