--- a/styles/gameWindow.css
+++ b/styles/gameWindow.css
@@ -1,10 +1,12 @@
-* {
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
+
+*{
     padding: 0;
     margin: 0;
 }
 
 body{
-    font-family: 'Poppins', sans-serif;;
+    font-family: 'Poppins', sans-serif;
 }
 
 .btn{
@@ -16,5 +18,4 @@ body{
   font-weight: 900;
   font-size: 40px;
   color: #0C0F21;
-
 }
