--- a/style/gameWindow.css
+++ b/style/gameWindow.css
@@ -12,14 +12,19 @@ body{
 .btn{
   display: inline-block;
   background: none;
-  padding: 20px;
-  border-radius: .5rem;
+  padding: 15px;
+  border-radius: .8rem;
   border-style: none;
   font-weight: 900;
-  font-size: 40px;
+  font-size: 30px;
   color: #0C0F21;
 }
 
 .btn:hover{
     background-color: aliceblue;
+    justify-content: "center";
+    transition: .3s;
+    color :#FFBB0B;
+    cursor: pointer;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
