--- a/styles/gameWindow.css
+++ b/styles/gameWindow.css
@@ -3,23 +3,28 @@
 *{
     padding: 0;
     margin: 0;
-<<<<<<< HEAD
-}
-=======
     overflow: hidden;
->>>>>>> 7c203e0630b576b7141aa27aa4575d368cff40b9
+}
 
 body{
     font-family: 'Poppins', sans-serif;
 }
-
 .btn{
-  display: inline-block;
-  background: none;
-  padding: 20px;
-  border-radius: .5rem;
-  border-style: none;
-  font-weight: 900;
-  font-size: 40px;
-  color: #0C0F21;
+    display: inline-block;
+    background: none;
+    padding: 20px;
+    border-radius: .5rem;
+    border-style: none;
+    font-weight: 900;
+    font-size: 40px;
+    color: #0C0F21;
+}
+
+.btn:hover{
+    background-color: aliceblue;
+    justify-content: "center";
+    transition: .3s;
+    color :#FFBB0B;
+    cursor: pointer;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
