--- a/style/gameWindow.css
+++ b/style/gameWindow.css
@@ -22,10 +22,48 @@ body{
 }
 
 .buttun:hover {
-  background-color: #5D5F71;
-  border : solid 2px  #C28F0B;
+  background-color: white;
 }
 
 .buttun {
 transition: all 0.3s ease;
+display : flex;
+justify-Content : center;
+align-Items : center;
+align-content: center;
+height : 25%;
+width : 50%;
+border :solid 2px;
+border-Color : white;
+border-Radius : 25px;
+color: red;
+}
+
+.text_buttun_white {
+  color: white;
+  font-weight: 700;
+  font-size: 45px;
+  width: 100%; 
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  line-height: 100%;
+}
+
+.text_buttun_white:hover {
+  color : #FFBB0B;
+}
+
+.text_buttun_yellow {
+
+  color: #FFBB0B;
+  font-weight: 700;
+  font-size: 45px;
+  width: 100%; 
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  line-height: 100%;
 }
