--- a/styles/gameWindow.css
+++ b/styles/gameWindow.css
@@ -3,21 +3,21 @@
 *{
     padding: 0;
     margin: 0;
-    overflow: hidden;
 }
 
 body{
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Poppins', sans-serif;;
 }
+
 .btn{
-    display: inline-block;
-    background: none;
-    padding: 20px;
-    border-radius: .5rem;
-    border-style: none;
-    font-weight: 900;
-    font-size: 40px;
-    color: #0C0F21;
+  display: inline-block;
+  background: none;
+  padding: 15px;
+  border-radius: .8rem;
+  border-style: none;
+  font-weight: 900;
+  font-size: 30px;
+  color: #0C0F21;
 }
 
 .btn:hover{
@@ -28,3 +28,52 @@ body{
     cursor: pointer;
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+
+.buttun:hover {
+    background-color: white;
+  }
+  
+  .buttun {
+  transition: all 0.3s ease;
+  display : flex;
+  justify-Content : center;
+  align-Items : center;
+  align-content: center;
+  height : 25%;
+  width : 50%;
+  border :solid 2px;
+  border-Color : white;
+  border-Radius : 25px;
+  color: red;
+  font-size:6vw;
+  }
+  
+  .text_buttun_white {
+    color: white;
+    font-weight: 700;
+    font-size:0.4em;
+    width: 100%; 
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    line-height: 100%;
+  }
+  
+  .text_buttun_white:hover {
+    color : #FFBB0B;
+  }
+  
+  .text_buttun_yellow {
+  
+    color: #FFBB0B;
+    font-weight: 700;
+    font-size:0.4em;
+    width: 100%; 
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    line-height: 100%;
+  }
