--- a/style/gameWindow.css
+++ b/style/gameWindow.css
@@ -37,12 +37,13 @@ border :solid 2px;
 border-Color : white;
 border-Radius : 25px;
 color: red;
+font-size:6vw;
 }
 
 .text_buttun_white {
   color: white;
   font-weight: 700;
-  font-size: 45px;
+  font-size:0.4em;
   width: 100%; 
   height: 100%;
   display: flex;
@@ -59,7 +60,7 @@ color: red;
 
   color: #FFBB0B;
   font-weight: 700;
-  font-size: 45px;
+  font-size:0.4em;
   width: 100%; 
   height: 100%;
   display: flex;
