--- a/styles/createLevel.css
+++ b/styles/createLevel.css
@@ -1,63 +1,70 @@
-.buttons{
-    /*display: flex;
-    justify-content: space-between;
-    align-items: center;
-    
+*{
+  padding: 0;
+  margin: 0;
+  overflow: hidden;
 
-    width: 100%;
-    margin: 0 auto;*/
-    display: inline-flex;
-    flex-wrap: wrap;
-    padding-top: 40px;
-    position: absolute;
-    right: 20px;
-    
+}
+
+.buttons{
+  /*display: flex;
+  justify-content: space-between;
+  align-items: center;
+  
+
+  width: 100%;
+  margin: 0 auto;*/
+  display: inline-flex;
+  flex-wrap: wrap;
+  position: absolute;
+  right: 20px;
+  top: 50px;
+  
+}
+.textdiv{
+display: inline-flex;
+flex-wrap: wrap;
+  position: absolute;
+  right: 20px;
+  margin-top: 20px;
+}
+
+.text3{
+display: inline-block;
+margin-left: 20px;
+margin-right: 20px;
+}
+.text2{
+display: inline-block;
+margin-right: 80px;
+
+}
+.text{
+display: inline-block;
+margin-right: 130px;
 }
 
 .btn_level{
-    padding: 10px 20px;
-    background-color: #0C0F21;
-    border: none;
-    border-radius: 5px;
-    color: white;
-    cursor: pointer;
-    margin-left: 30px;
-  }
-  .buttonsRemove{
-    display: flex;
-    justify-content: space-between;
-  }
-.text{
-  margin-left: 67%;
-  font-size: 20px;
-}
-.btn_save{
-  width: 70px;
-  margin-top: 100px;
-  margin-right: 20px;
+  padding: 10px 20px;
   background-color: #0C0F21;
+  border: none;
   border-radius: 5px;
   color: white;
-
+  cursor: pointer;
+  margin-left: 30px;
 }
-  .btn_level:hover {
-    background-color: #40445c;
-    color: white;
-    transition: all 0.2s ease-in-out;
-  }
-  
-  .btn_level:active {
-    transform: translateY(2px);
-  }
- 
+
+.btn_level:hover {
+  background-color: #40445c;
+  color: white;
+  transition: all 0.2s ease-in-out;
+}
+
+.btn_level:active {
+  transform: translateY(2px);
+}
 
 
 
-
-
-
-
-
-
-
-
+#bloc_A,#bloc_B,#bloc_C{
+margin-left: 60px;
+}
