--- a/styles/gameWindow.css
+++ b/styles/gameWindow.css
@@ -6,7 +6,9 @@
 }
 
 body{
-    font-family: 'Poppins', sans-serif;;
+    font-family: 'Poppins', sans-serif;
+    overflow: hidden;
+    
 }
 
 .btn{
