--- a/styles/gameWindow.css
+++ b/styles/gameWindow.css
@@ -30,6 +30,14 @@ body{
     cursor: pointer;
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+.btnf:focus{
+  background-color: aliceblue;
+    justify-content: "center";
+    transition: .3s;
+    color :#FFBB0B;
+    cursor: pointer;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
 
 
 .buttun:hover {
